--- a/schedule-app/src/styles/LoginSignup.css
+++ b/schedule-app/src/styles/LoginSignup.css
@@ -1,8 +1,12 @@
 @media all and (min-width: 480px) {
-    .Login {
+    .Login .Signup {
         padding: 60px 0;
     }
     .Login form {
+        margin: 0 auto;
+        max-width: 320px;
+    }
+    .Signup form {
         margin: 0 auto;
         max-width: 320px;
     }
