--- a/schedule-app/src/styles/Home.css
+++ b/schedule-app/src/styles/Home.css
@@ -5,7 +5,7 @@
 }
 
 .card-deck {
-  padding-top: 30px;
+  padding-top: 10px;
   padding-bottom: 15px;
   width: 100%;
   display: flex;
@@ -35,4 +35,7 @@
 
 .col-3 {
   padding-right: 0px;
+}
+img {
+  width: 80%;
 }
