--- a/schedule-app/src/styles/Schedule.css
+++ b/schedule-app/src/styles/Schedule.css
@@ -1,3 +1,35 @@
+.top {
+  display: flex !important;
+}
+
 .card {
   width: 100% !important;
+}
+
+.card-deck {
+  padding-top: 0px;
+  padding-bottom: 10px;
+}
+
+.col-5 {
+  background-color: lightgray;
+  padding-top: 20px;
+  margin-bottom: 20px;
+  border-radius: 7px;
+}
+
+.screen {
+  margin-top: 15px;
+}
+
+.nav-item {
+  margin-right: 15px;
+  margin-left: 15px;
+}
+
+h4 {
+  text-align: center;
+}
+h2 {
+  padding-bottom: 5px;
 }
